style: heading spacing fix

--- a/sandbox/styleguide/source/styles/06-components/_components.article.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.article.scss
@@ -46,7 +46,7 @@
   }
 
   h2 {
-    @include padding(($font-leading--base*2 + rem),0,($font-leading--base*.65 + rem),0);
+    @include padding(($font-leading--base*2 + rem),0,($font-leading--base*.5 + rem),0);
     @include font-size(xlarge);
 
     letter-spacing: -.1rem;
@@ -71,14 +71,14 @@
   }
 
   h3 {
-    @include padding(($font-leading--base*1.35 + rem),0,($font-leading--base*.4 + rem),0);
+    @include padding(($font-leading--base*1.35 + rem),0,($font-leading--base*.3 + rem),0);
     @include font-size(large);
 
     letter-spacing: -.05rem;
   }
 
   h4, h5, h6 {
-    @include padding(($font-leading--base*1.15 + rem),0,($font-leading--base*.4 + rem),0);
+    @include padding(($font-leading--base*1.15 + rem),0,($font-leading--base*.2 + rem),0);
   }
 
   h4 {
