--- a/sandbox/styleguide/source/styles/06-components/_components.headings.scss
+++ b/sandbox/styleguide/source/styles/06-components/_components.headings.scss
@@ -10,7 +10,7 @@
 }
 
 .c-heading--xxlarge, .c-heading--xlarge {
-  @include padding(($font-leading--base*2 + rem),0,($font-leading--base*.65 + rem),0);
+  @include padding(($font-leading--base*2 + rem),0,($font-leading--base*.5 + rem),0);
 }
 
 .c-heading--xxlarge {
@@ -32,14 +32,14 @@
 }
 
 .c-heading--large {
-  @include padding(($font-leading--base*1.35 + rem),0,($font-leading--base*.4 + rem),0);
+  @include padding(($font-leading--base*1.35 + rem),0,($font-leading--base*.3 + rem),0);
   @include font-size(large);
 
   letter-spacing: -.05rem;
 }
 
 .c-heading--medium, .c-heading--small {
-  @include padding(($font-leading--base*1.15 + rem),0,($font-leading--base*.4 + rem),0);
+  @include padding(($font-leading--base*1.15 + rem),0,($font-leading--base*.2 + rem),0);
 }
 
 .c-heading--medium {
